[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asciichartpy>=1.5.25",
    "chess>=1.11.2",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
